Add source code links and improve grammar somewhat

--- a/index.html
+++ b/index.html
@@ -24,45 +24,66 @@
 
     <h1>Mouse Following</h1>
     <p>
-      As you can hopefully see in the video, the ball has a maximum
-      acceleration, so it has a weightier feel when starting to come towards the
-      mouse.
+      As you can hopefully see in the video, I did the maximum acceleration
+      challenge, so the ball has a weightier feel when starting to come towards
+      the mouse.
+      <a
+        href="https://github.com/GarrettU27/CSCI5611-Homework1/blob/main/MouseFollow.pde"
+        >The source code can be found here.</a
+      >
     </p>
     <video width="512" height="384" controls>
-        <source src="MouseFollow.mp4" type="video/mp4">
+      <source src="MouseFollow.mp4" type="video/mp4" />
     </video>
 
     <h1>Particle Systems</h1>
     <p>
-        The simple particle system is mostly standard, but there is code to delete balls after they
-        have existed for a certain period of time
+      The simple particle system is mostly standard, but there is code to delete
+      balls after they have existed for a certain period of time.
+      <a
+        href="https://github.com/GarrettU27/CSCI5611-Homework1/blob/main/SimpleParticleSystem.pde"
+        >The source code can be found here.</a
+      >
     </p>
     <video width="512" height="384" controls>
-        <source src="SimpleParticleSystem.mp4" type="video/mp4">
+      <source src="SimpleParticleSystem.mp4" type="video/mp4" />
     </video>
 
     <h1>TTC Forces (Collision Avoidance)</h1>
     <p>
-        No challenges were done in my TTC forces project. It just calculates forces and collisions
+      No challenges were done in my TTC forces project. It just calculates
+      forces and collisions.
+      <a
+        href="https://github.com/GarrettU27/CSCI5611-Homework1/blob/main/TTCForces_Exercise.pde"
+        >The source code can be found here.</a
+      >
     </p>
     <video width="512" height="384" controls>
-        <source src="TTCCollisions.mp4" type="video/mp4">
+      <source src="TTCCollisions.mp4" type="video/mp4" />
     </video>
-    
+
     <h1>Tree Search</h1>
     <p>
-        No challenges were done in my Tree Search project. It simple runs Depth-First Search like
-        asked
+      No challenges were done in my Tree Search project. It simple runs
+      Depth-First Search like asked.
+      <a
+        href="https://github.com/GarrettU27/CSCI5611-Homework1/blob/main/DFS_Exercise.pde"
+        >The source code can be found here.</a
+      >
     </p>
     <img width="100%" src="DFSOutput.png" />
 
     <h1>Probabilistic Road Map (PRM)</h1>
     <p>
-        No challenges were done in my PRM project. It allows refreshing of the PRM and the moving of
-        the box obstacle, just like instructions asked for
+      No challenges were done in my PRM project. It allows refreshing of the PRM
+      and the moving of the box obstacle, just like instructions asked for.
+      <a
+        href="https://github.com/GarrettU27/CSCI5611-Homework1/blob/main/PRM_Exercise_SingleFile.pde"
+        >The source code can be found here.</a
+      >
     </p>
     <video width="512" height="384" controls>
-        <source src="PRM.mp4" type="video/mp4">
+      <source src="PRM.mp4" type="video/mp4" />
     </video>
 
     <script src="" async defer></script>
